--- a/ejemplo.html
+++ b/ejemplo.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejemplo de github</title>
+    <title>Ejemplo</title>
 </head>
 <body>
-    <h1> HOLISSSSSSSSSSSSSSSSS </h1>
-    <a href="ejemplo.html">Ir a ejemplo</a>
+    <h1>Ejemplo</h1>
 </body>
 </html>
